changed h1 color to blue

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 color:red;
     }
+    h1{
+        color:blue;
+        font-family: Arial, Helvetica, sans-serif;
+         
+    }
         </style>
 </head>
 <body>
